--- a/pages/category-products/index.html
+++ b/pages/category-products/index.html
@@ -10,19 +10,19 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header class="header">
+    <header class="header container">
       <a class="header-logo" href="../../index.html">
         <img src="../../images/logo.svg" alt="logo" />
       </a>
       <nav class="header-nav">
-        <ul>
-          <li><a href="#" class="nav-link">Blog</a></li>
-          <li class="nav-link">Catalog</li>
+        <ul class="header-nav__link-list">
+          <li><a href="../blog/index.html" class="nav-link">Blog</a></li>
+          <li><a href="#" class="nav-link">Catalog</a></li>
           <li><a href="#" class="nav-link">About us</a></li>
         </ul>
-        <ul>
-          <li><a href="#" class="search"><img src="../../images/search.svg" class="search-icon" alt="search"/></a></li>
-          <li><a href="#" class="nav-link nav-link_bold">Contact us</a></li>
+        <ul class="header-nav__contacts">
+          <li><a href="#" class="search"><img src="../../images/search.svg" alt="search"/></a></li>
+          <li><a href="../contact-us/index.html" class="contact-link">Contact us</a></li>
         </ul>
       </nav>
     </header>
