--- a/pages/toys-for-kids/index.html
+++ b/pages/toys-for-kids/index.html
@@ -28,105 +28,109 @@
     </header>
     <main>
     <section class="toys">
-      <h1 class="section-title">Toy for kids</h1>
-      <ul class="breadcrumbs">
-        <li><a href="../../index.html" class="breadcrumbs-link">Home</a></li>
-        <li><a href="../category-products/index.html" class="breadcrumbs-link">Catalog</a></li>
-        <li class="breadcrumb">Toys</li>
-      </ul>
+      <div class="container">
+        <h1 class="section-title">Toy for kids</h1>
+        <ul class="breadcrumbs">
+          <li class="breadcrumbs-item"><a href="../../index.html" class="breadcrumbs-link">Home</a></li>
+          <li class="breadcrumbs-item"><a href="../category-products/index.html" class="breadcrumbs-link">Catalog</a></li>
+          <li class="breadcrumb breadcrumbs-item">Toys</li>
+        </ul>
+      </div>
       <form class="toys-filter form">
-        <fieldset>
-          <legend class="filter-legend">Cost</legend>
-          <label>
-            <input class="filter-range" type="range" name="cost" min="0" max="500">
-          </label>
-        </fieldset>
-        <fieldset>
-          <legend class="filter-legend">Color</legend>
-          <label>
-            <input class="filter-color" type="checkbox" name="color" value="black" checked>
-            Black
-          </label>
-          <label>
-            <input class="filter-color" type="checkbox" name="color" value="blue">
-            Blue
-          </label>
-          <label>
-            <input class="filter-color" type="checkbox" name="color" value="green">
-            Green
-          </label>
-          <label>
-            <input class="filter-color" type="checkbox" name="color" value="white">
-            White
-          </label>
-        </fieldset>
-        <fieldset>
-          <legend class="filter-legend">Delivery</legend>
-          <label>
-            <input class="filter-delivery" type="radio" name="delivery" value="free">Free shipping
-          </label>
-          <label>
-            <input class="filter-delivery" type="radio" name="delivery" value="fast" checked>Fast shipping
-          </label>
-        </fieldset>
-        <fieldset>
-          <legend class="filter-legend">Amount</legend>
-          <label>
-            <input class="filter-amount" type="radio" name="amount" value="0-5" checked>
-            0-5
-          </label>
-          <label>
-            <input class="filter-amount" type="radio" name="amount" value="10-20">
-            10-20
-          </label>
-          <label>
-            <input class="filter-amount" type="radio" name="amount" value="20-50">
-            20-50
-          </label>
-        </fieldset>
-        <button class="button" type="submit">Apply</button>
+        <div class="container">
+          <fieldset>
+            <legend class="filter-legend">Cost</legend>
+            <label>
+              <input class="filter-range" type="range" name="cost" min="0" max="500">
+            </label>
+          </fieldset>
+          <fieldset>
+            <legend class="filter-legend">Color</legend>
+            <label>
+              <input class="filter-color" type="checkbox" name="color" value="black" checked>
+              Black
+            </label>
+            <label>
+              <input class="filter-color" type="checkbox" name="color" value="blue">
+              Blue
+            </label>
+            <label>
+              <input class="filter-color" type="checkbox" name="color" value="green">
+              Green
+            </label>
+            <label>
+              <input class="filter-color" type="checkbox" name="color" value="white">
+              White
+            </label>
+          </fieldset>
+          <fieldset>
+            <legend class="filter-legend">Delivery</legend>
+            <label>
+              <input class="filter-delivery" type="radio" name="delivery" value="free">Free shipping
+            </label>
+            <label>
+              <input class="filter-delivery" type="radio" name="delivery" value="fast" checked>Fast shipping
+            </label>
+          </fieldset>
+          <fieldset>
+            <legend class="filter-legend">Amount</legend>
+            <label>
+              <input class="filter-amount" type="radio" name="amount" value="0-5" checked>
+              0-5
+            </label>
+            <label>
+              <input class="filter-amount" type="radio" name="amount" value="10-20">
+              10-20
+            </label>
+            <label>
+              <input class="filter-amount" type="radio" name="amount" value="20-50">
+              20-50
+            </label>
+          </fieldset>
+          <button class="button" type="submit">Apply</button>
+        </div>
       </form>
     </section>
-    <section class="toy-slider">
+    <section class="toy-slider container">
       <h2 class="hidden">Products display</h2>
       <article class="toy-slider__card">
         <a href="#" class="toy-slider__link">
-          <img src="/images/shark-bag.jpg" alt="SHARKY BEAN BAG CHAIR COVER">
+          <img src="../../images/shark-bag.jpg" alt="SHARKY BEAN BAG CHAIR COVER">
         </a>
         <h3 class="card-title"><a href="#">SHARKY BEAN BAG CHAIR COVER</a></h3>
         <p class="price">$60.00 USD</p>
       </article>
       <article class="toy-slider__card">
         <a href="#" class="toy-slider__link">
-          <img src="/images/brass.jpg" alt="BRASS DECO FRAMES">
+          <img src="../../images/brass.jpg" alt="BRASS DECO FRAMES">
         </a>
         <h3 class="card-title"><a href="#">BRASS DECO FRAMES</a></h3>
         <p class="price">$66.00 USD</p>
       </article>
       <article class="toy-slider__card">
         <a href="#" class="toy-slider__link">
-          <img src="/images/apron.jpg" alt="CIBO FULL APRON">
+          <img src="../../images/apron.jpg" alt="CIBO FULL APRON">
         </a>
         <h3 class="card-title"><a href="#">CIBO FULL APRON</a></h3>
         <p class="price">$60.00 USD</p>
       </article>
       <article class="toy-slider__card">
         <a href="#" class="toy-slider__link">
-          <img src="/images/gumball-machine.jpg" alt="GATCHA GATCHA GUMBALL MACHINE">
+          <img src="../../images/gumball-machine.jpg" alt="GATCHA GATCHA GUMBALL MACHINE">
         </a>
         <h3 class="card-title"><a href="#">GATCHA GATCHA GUMBALL MACHINE</a></h3>
         <p class="price">$56.00 USD</p>
       </article>
       <article class="toy-slider__card">
         <a href="#" class="toy-slider__link">
-          <img src="/images/christmas-candle.jpg" alt="CHRISTMAS ADVENT SCENTED CANDLE">
+          <img src="../../images/christmas-candle.jpg" alt="CHRISTMAS ADVENT SCENTED CANDLE">
         </a>
         <h3 class="card-title"><a href="#">CHRISTMAS ADVENT SCENTED CANDLE</a></h3>
         <p class="price">$29.00 USD</p>
       </article>
       <article class="toy-slider__card">
         <a href="#" class="toy-slider__link">
-          <img src="/images/tangle_spinning_tea_light.jpg" alt="TANGLE SPINNING TEA LIGHT">
+          <img src="../../images/tangle_spinning_tea_light.jpg" alt="TANGLE SPINNING TEA LIGHT">
         </a>
         <H3 class="card-title"><a href="#">TANGLE SPINNING TEA LIGHT</a></H3>
         <p class="price">$56.00 USD</p>
@@ -142,52 +146,58 @@
     </section>
     </main>
     <footer class="footer">
-      <h2 class="footer-title">Navigation</h2>
-      <ul class="navigation-list">
-        <li><a href="#" class="footer-links">About Us</a></li>
-        <li><a href="#" class="footer-links">Blog</a></li>
-        <li><a href="#" class="footer-links">Design Services</a></li>
-        <li><a href="#" class="footer-links">Featured On</a></li>
-        <li><a href="#" class="footer-links">2018 Holiday Catalog</a></li>
-        <li><a href="#" class="footer-links">Shop By Designer</a></li>
-      </ul>
-      <h2 class="footer-title">Customer Information</h2>
-      <ul class="customer-info-list">
-        <li><a href="#" class="footer-links">Contact Us</a></li>
-        <li><a href="#" class="footer-links">Sale Exclusions</a></li>
-        <li><a href="#" class="footer-links">Shipping & Returns</a></li>
-        <li><a href="#" class="footer-links">Terms & Conditions</a></li>
-        <li><a href="#" class="footer-links">Privacy Policy</a></li>
-        <li><a href="#" class="footer-links">Search</a></li>
-      </ul>
-      <h2 class="footer-title">Connect</h2>
-      <form class="footer-form">
-        <input type="email" class="footer-input" name="email" placeholder="Email" />
-        <button class="button button-border" type="submit">
-          Join
-        </button>
-      </form>
-      <ul class="social-list">
-        <li><a href="#" class="social-link"><img src="/images/Facebook.svg" alt="Facebook" /></a></li>
-        <li><a href="#" class="social-link"><img src="/images/Twitter.svg" alt="Twitter" /></a></li>
-        <li><a href="#" class="social-link"><img src="/images/Pinterest.svg" alt="Pinterest" /></a></li>
-        <li><a href="#" class="social-link"><img src="/images/Instagram.svg" alt="Instagram" /></a></li>
-      </ul>
-      <div class="company-info">
-        <div class="rating">
-          <p>Company Rating</p>
-          <span class="star">&#9733;</span>
-          <span class="star">&#9733;</span>
-          <span class="star">&#9733;</span>
-          <span class="star">&#9733;</span>
-          <span class="star">&#9733;</span>
+      <div class="footer-wrapper container">
+        <div class="footer-section">
+          <h2 class="footer-title">Navigation</h2>
+          <ul class="navigation-list">
+            <li><a href="#" class="footer-links">About Us</a></li>
+            <li><a href="#" class="footer-links">Blog</a></li>
+            <li><a href="#" class="footer-links">Design Services</a></li>
+            <li><a href="#" class="footer-links">Featured On</a></li>
+            <li><a href="#" class="footer-links">2018 Holiday Catalog</a></li>
+            <li><a href="#" class="footer-links">Shop By Designer</a></li>
+          </ul>
+          <div class="rating">
+            <p>Company Rating</p>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+          </div>
         </div>
-        <p class="copyright">
-          Copyright © 2018 Dlk • Design Life Kids
-        </p>
-        <p class="design-company">
-          Web Design — <a href="#">Direct Line Development</a>
-        </p>
+        <div class="footer-section">
+          <h2 class="footer-title">Customer Information</h2>
+          <ul class="customer-info-list">
+            <li><a href="#" class="footer-links">Contact Us</a></li>
+            <li><a href="#" class="footer-links">Sale Exclusions</a></li>
+            <li><a href="#" class="footer-links">Shipping & Returns</a></li>
+            <li><a href="#" class="footer-links">Terms & Conditions</a></li>
+            <li><a href="#" class="footer-links">Privacy Policy</a></li>
+            <li><a href="#" class="footer-links">Search</a></li>
+          </ul>
+          <p class="copyright">
+            Copyright © 2018 Dlk • Design Life Kids
+          </p>
+        </div>
+        <div class="footer-section">
+          <h2 class="footer-title">Connect</h2>
+          <form class="footer-form">
+            <input type="email" class="footer-input" name="email" placeholder="Email" />
+            <button class="button button-border" type="submit">
+              Join
+            </button>
+          </form>
+          <ul class="social-list">
+            <li><a href="#" class="social-link"><img src="../../images/Facebook.svg" alt="Facebook" /></a></li>
+            <li><a href="#" class="social-link"><img src="../../images/Twitter.svg" alt="Twitter" /></a></li>
+            <li><a href="#" class="social-link"><img src="../../images/Pinterest.svg" alt="Pinterest" /></a></li>
+            <li><a href="#" class="social-link"><img src="../../images/Instagram.svg" alt="Instagram" /></a></li>
+          </ul>
+          <p class="design-company">
+            Web Design — <a href="#">Direct Line Development</a>
+          </p>
+        </div>
       </div>
     </footer>
   </body>
