--- a/index.html
+++ b/index.html
@@ -28,19 +28,22 @@
     </header>
     <main>
       <section class="hero-slider container">
-        <img class="poster" src="images/poster.png" alt="poster" />
-        <h1 class="hidden">Design Kids Life Collection</h1>
-        <p class="hero-slider__number">01</p>
-        <ul class="hero-slider__nav">
-          <li><button class="slider-button slider-button_selected"></button></li>
-          <li><button class="slider-button"></button></li>
-          <li><button class="slider-button"></button></li>
-          <li><button class="slider-button"></button></li>
-        </ul>
-        <div class="hero-slider__content">
-          <h2 class="hero-slider__title">THE OOH NOO COLLECTION</h2>
-          <p class="hero-slider__subtitle">Designed in Slovenia</p>
-          <a class="button button_black">Explore Now</a>
+        <div class="hero-slider__wrapper">
+          <div class="hero-slider__inner">
+            <h1 class="hidden">Design Kids Life Collection</h1>
+            <p class="hero-slider__number">01</p>
+            <ul class="hero-slider__nav">
+              <li><button class="slider-button slider-button_selected"></button></li>
+              <li><button class="slider-button"></button></li>
+              <li><button class="slider-button"></button></li>
+              <li><button class="slider-button"></button></li>
+            </ul>
+            <div class="hero-slider__content">
+              <h2 class="hero-slider__title">THE OOH NOO COLLECTION</h2>
+              <p class="hero-slider__subtitle">Designed in Slovenia</p>
+              <a href="#" class="button slider-button__explore ">Explore Now</a>
+            </div>
+          </div>
         </div>
         <p class="hero-slider__footer">
           Free (continental) USA shipping on all orders of $100 USD or
