--- a/index.html
+++ b/index.html
@@ -31,17 +31,26 @@
         <div class="hero-slider__wrapper">
           <div class="hero-slider__inner">
             <h1 class="hidden">Design Kids Life Collection</h1>
-            <p class="hero-slider__number">01</p>
-            <ul class="hero-slider__nav">
-              <li><button class="slider-button slider-button_selected"></button></li>
-              <li><button class="slider-button"></button></li>
-              <li><button class="slider-button"></button></li>
-              <li><button class="slider-button"></button></li>
-            </ul>
-            <div class="hero-slider__content">
-              <h2 class="hero-slider__title">THE OOH NOO COLLECTION</h2>
-              <p class="hero-slider__subtitle">Designed in Slovenia</p>
-              <a href="#" class="button slider-button__explore ">Explore Now</a>
+            <div class="hero-slider__nav">
+              <p class="hero-slider__number">01</p>
+              <ul class="hero-slider__btn">
+                <li><button class="slider-button slider-button_selected"></button></li>
+                <li><button class="slider-button"></button></li>
+                <li><button class="slider-button"></button></li>
+                <li><button class="slider-button"></button></li>
+              </ul>
+            </div>
+            <div class="hero-slider__list">
+              <div class="hero-slider__item">
+                <div class="hero-slider__content">
+                  <h2 class="hero-slider__title">THE OOH NOO COLLECTION</h2>
+                  <p class="hero-slider__subtitle">Designed in Slovenia</p>
+                  <a href="#" class="button slider-button__explore ">Explore Now</a>
+                </div>
+                <div class="hero-slider__item-thumb">
+                  <img src="images/poster.png" class="poster" alt="oh no collection">
+                </div>
+              </div>
             </div>
           </div>
         </div>
