--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
             <h1 class="hidden">Design Kids Life Collection</h1>
             <div class="hero-slider__nav">
               <p class="hero-slider__number">01</p>
-              <ul class="hero-slider__btn">
-                <li><button class="slider-button slider-button_selected"></button></li>
-                <li><button class="slider-button"></button></li>
-                <li><button class="slider-button"></button></li>
-                <li><button class="slider-button"></button></li>
+              <ul class="hero-slider__list-btn">
+                <li class="nav-btn__item"><button class="slider-button slider-button_selected"></button></li>
+                <li class="nav-btn__item"><button class="slider-button"></button></li>
+                <li class="nav-btn__item"><button class="slider-button"></button></li>
+                <li class="nav-btn__item"><button class="slider-button"></button></li>
               </ul>
             </div>
             <div class="hero-slider__list">
@@ -45,7 +45,7 @@
                 <div class="hero-slider__content">
                   <h2 class="hero-slider__title">THE OOH NOO COLLECTION</h2>
                   <p class="hero-slider__subtitle">Designed in Slovenia</p>
-                  <a href="#" class="button slider-button__explore ">Explore Now</a>
+                  <a href="#" class="button slider-button__explore">Explore Now</a>
                 </div>
                 <div class="hero-slider__item-thumb">
                   <img src="images/poster.png" class="poster" alt="oh no collection">
@@ -62,37 +62,33 @@
       <section class="category container">
         <h2 class="block-title">Category Products</h2>
         <ul class="category-list">
-          <li>
+          <li class="category-list__item categoty-list__bg-apparel">
             <a href="#" class="category-products">
-              <img src="images/product-1.jpg" alt="Apparel kids"/>
-              <span class=".category-products__text">APPAREL KIDS</span>
+              <span class="category-products__text">APPAREL KIDS</span>
             </a>
           </li>
-          <li>
+          <li class="category-list__item categoty-list__bg-holiday">
             <a href="#" class="category-products">
-              <img src="images/product-2.jpg" alt="Holiday shop"/>
-              HOLIDAY SHOP
+              <span class="category-products__text">HOLIDAY SHOP</span>
             </a>
           </li>
-          <li>
+          <li class="category-list__item categoty-list__bg-toys">
             <a href="pages/toys-for-kids/index.html" class="category-products">
-              <img src="images/product-3.jpg" alt="Toys"/>
-              TOYS
+              <span class="category-products__text">TOYS</span>
             </a>
           </li>
-          <li>
+          <li class="category-list__item categoty-list__bg-accessories">
             <a href="#" class="category-products">
-              <img src="images/product-4.jpg" alt="Accessories"/>
-              ACCESSORIES
+              <span class="category-products__text">ACCESSORIES</span>
             </a>
           </li>
         </ul>
         <div class="category-description">
           <div class="categoty-description__button">
-            <button class="arrow button-border">
+            <button class="arrow">
               <span class="arrow_left"></span>
             </button>
-            <button class="arrow button-border">
+            <button class="arrow">
               <span class="arrow_right"></span>
             </button>
           </div>
@@ -125,7 +121,7 @@
               we work with to thank!
             </p>
           </div>
-          <a href="#" class="button">Learn more</a>
+          <a href="#" class="button services-btn__learn">Learn more</a>
         </div>
       </section>
       <section class="partners container">
