--- a/index.html
+++ b/index.html
@@ -134,19 +134,19 @@
         </ul>
       </section>
     </main>
-    <div class="container">
+    <div class="container block-article">
       <article class="about">
-        <h2 class="block-title">Design Life Kids</h2>
+        <h2 class="block-title about-title">Design Life Kids</h2>
         <div class="about-subtitle">About Us</div>
         <p class="about-text">
           Some days i feel like i've been working on dlk my entire life
           and there are other days that i am completely shocked that
           four years have flown by. It's simply magical.
         </p>
-        <a href="#" class="button button_black">Buy Now</a>
+        <a href="#" class="button block-article__button">Buy Now</a>
       </article>
       <article class="contacts">
-        <h2 class="block-title">Contacts</h2>
+        <h2 class="block-title contacts-title">Contacts</h2>
         <p class="contacts-text">
           Some days i feel like i've been working on dlk my entire life
           and there are other days that i am completely shocked that
@@ -193,8 +193,7 @@
         <div class="footer-section">
           <h2 class="footer-title">Connect</h2>
           <form class="footer-form">
-            <input type="email" class="footer-input" name="email" placeholder="Email" />
-            <button class="button button-border" type="submit">
+            <input type="email" class="footer-input" name="email" placeholder="Email"/><button class="button footer-btn" type="submit">
               Join
             </button>
           </form>
