--- a/index.html
+++ b/index.html
@@ -60,25 +60,25 @@
         </p>
       </section>
       <section class="category container">
-        <h2 class="block-title">Category Products</h2>
+        <h2 class="block-title categoty-title">Category Products</h2>
         <ul class="category-list">
-          <li class="category-list__item categoty-list__bg-apparel">
-            <a href="#" class="category-products">
+          <li class="category-list__item category-product__bg-apparel" style="background-image: url(images/product-1.png);">
+            <a href="#" class="category-products__link" >
               <span class="category-products__text">APPAREL KIDS</span>
             </a>
           </li>
-          <li class="category-list__item categoty-list__bg-holiday">
-            <a href="#" class="category-products">
+          <li class="category-list__item category-product__bg-holiday" style="background-image: url(images/product-2.png);">
+            <a href="#" class="category-products__link">
               <span class="category-products__text">HOLIDAY SHOP</span>
             </a>
           </li>
-          <li class="category-list__item categoty-list__bg-toys">
-            <a href="pages/toys-for-kids/index.html" class="category-products">
+          <li class="category-list__item category-product__bg-toys" style="background-image: url(images/product-3.png)";>
+            <a href="pages/toys-for-kids/index.html" class="category-products__link">
               <span class="category-products__text">TOYS</span>
             </a>
           </li>
-          <li class="category-list__item categoty-list__bg-accessories">
-            <a href="#" class="category-products">
+          <li class="category-list__item category-product__bg-accessories" style="background-image: url(images/product-4.png);">
+            <a href="#" class="category-products__link">
               <span class="category-products__text">ACCESSORIES</span>
             </a>
           </li>
@@ -152,7 +152,9 @@
           and there are other days that i am completely shocked that
           four years have flown by. It's simply magical.
         </p>
-        <img class="map" src="map.png" alt="map" />
+        <div class="map">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2372.5357565744243!2d49.288136315736814!3d53.512487980014185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x41687981eb77e79b%3A0xc6236db15e1d074e!2sProspekt%20Stepana%20Razina%2C%2044%2C%20Tolyatti%2C%20Samarskaya%20oblast&#39;%2C%20445027!5e0!3m2!1sen!2sru!4v1581966809722!5m2!1sen!2sru" width="483" height="196" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        </div>
       </article>
     </div>
     <footer class="footer">
@@ -168,13 +170,13 @@
             <li><a href="#" class="footer-links">Shop By Designer</a></li>
           </ul>
           <div class="rating">
-            <p>Company Rating</p>
+            <p class="company-rating">Company Rating</p>
             <span class="star">&#9733;</span>
             <span class="star">&#9733;</span>
             <span class="star">&#9733;</span>
             <span class="star">&#9733;</span>
             <span class="star">&#9733;</span>
-          </div>
+          </div>        
         </div>
         <div class="footer-section">
           <h2 class="footer-title">Customer Information</h2>
@@ -190,7 +192,7 @@
             Copyright © 2018 Dlk • Design Life Kids
           </p>
         </div>
-        <div class="footer-section">
+        <div class="footer-section__connect">
           <h2 class="footer-title">Connect</h2>
           <form class="footer-form">
             <input type="email" class="footer-input" name="email" placeholder="Email"/><button class="button footer-btn" type="submit">
@@ -205,7 +207,7 @@
           </ul>
           <p class="design-company">
             Web Design — <a href="#">Direct Line Development</a>
-          </p>
+          </p>       
         </div>
       </div>
     </footer>
