--- a/index.html
+++ b/index.html
@@ -241,5 +241,6 @@
         <button type="button" class="form-close">+</button>
       </form>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
